--- a/templates/Realizacje.html.twig
+++ b/templates/Realizacje.html.twig
@@ -3,6 +3,7 @@
 
 <head>
     <title>Drewno Artek</title>
+    <meta name="description" content="Tworzymy najlepszej jakości wyroby drewniane w okolicy! Zapraszamy do kontaku z nami. Adres: Nowe Krąplewice 19 86-130. Kontakt: (+48)791-271-060.">
 
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
