--- a/templates/StronaGlowna.html.twig
+++ b/templates/StronaGlowna.html.twig
@@ -3,12 +3,14 @@
 
 <head>
     <title>Drewno Artek</title>
+    <meta name="description" content="Tworzymy najlepszej jakości wyroby drewniane w okolicy! Zapraszamy do kontaku z nami. Adres: Nowe Krąplewice 19 86-130. Kontakt: (+48)791-271-060.">
 
     <link rel="stylesheet" href="{{ asset('build/app.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'> 
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="{{ asset('logo/logo.png') }}">
     <meta charset="utf-8">
+	<meta name="google-site-verification" content="4tNYNgBSglbHdi6VHHmjfnTKV9CbXENbJlgKA1BZJSA" />
     <script>
         function onFocusText(ft, text){
             if(ft.value === text){
@@ -23,7 +25,6 @@
             }
         }
     </script>
-    
 </head>
 <body>
     <nav class="row m-0">
